--- a/style.css
+++ b/style.css
@@ -299,21 +299,6 @@
 		margin: 0px;
 		text-align: center;
 	}
-
-	/* Format links */
-
-	a:link, a:visited {
-		padding: 5px;
-    	color: #FFFFFF;
-    	background-color: #296E64;
-    	text-decoration: none;
-	}
-
-	a:hover, a:active {
-    	background-color: #222222;
-	}
-
-
 	/* Format navigation bar */
 
 	#navbar {
@@ -334,9 +319,6 @@
  		background-color: #296E64;
 	}
 
-	ul.dropdown {
-		display: none;
-	}
 
 	ul.nav a:link, ul.nav a:visited {
 		padding: 10px;
@@ -346,11 +328,6 @@
     	background-color: #296E64;
     	text-decoration: none;
     	text-transform: uppercase;
-	}
-	
-	ul.nav a:hover, ul.nav a:active {
-		padding: 10px;
-    	background-color: #222222;
 	}
 
 	/* Format main section layouts and elements*/
@@ -374,23 +351,10 @@
 		line-height: 120%;
 	}
 
-	h3 {
-		margin: 0px;
-		font-family: Verdana, Arial;
-		line-height: 120%;
-	}
-
 	h1 {
 		font-size: 200%;
 	}
 
-	h2 {
-		font-size: 160%;
-	}
-
-	h3 {
-		font-size: 130%;
-	}
 
 	.image-header {
 		margin-bottom: 2%;
@@ -402,38 +366,77 @@
 		padding: 0px;
 	}
 
-	a#footer-link:link, a#footer-link:visited {
-		color: #FFFFFF;
-		text-decoration: underline;
-		margin: 0px;
-		padding: 0px;
-	}
-
-	a#footer-link:hover, a#footer-link:active {
-		color: #FFFFFF;
-		text-decoration: underline;
-		background-color: transparent;
-	}
-	a#footer-links:link, a#footer-links:visited {
-		color: #FFFFFF;
-		text-decoration: underline;
-	}
-
-	a#footer-links:hover, a#footer-links:active {
-		color: #FFFFFF;
-		text-decoration: underline;
-		background-color: transparent;
-	}
-
 		/* Format footer */
 
 	#footer {
-		min-height: 100px;
-		padding: 2.5% 0;
-		background-color: #296E64;
-		text-align: center;
-		font-size: 90%;
+		height: 0px;
+		font-size: 0%;
 		color: #FFFFFF;
+	}
+	.caption-style{
+		list-style-type: none;
+		margin: 0px;
+		padding: 0px;
+		
+	}
+
+	.caption-style li{
+		float: left;
+		padding: 1px;
+		position: relative;
+		overflow: hidden;
+	}
+
+	.caption-style li img{
+		opacity: 1;
+	}
+
+
+	.caption-style img{
+		margin: 0px;
+		padding: 0px;
+		float: left;
+		z-index: 4;
+	}
+
+
+	.caption-style .caption{
+		cursor: pointer;
+		position: absolute;
+		opacity: 1;
+	}
+
+	.caption-style img{
+		-webkit-transition:all 0.25s ease-in-out;
+		-moz-transition:all 0.25s ease-in-out;
+		-o-transition:all 0.25s ease-in-out;
+		-ms-transition:all 0.25s ease-in-out;
+		transition:all 0.25s ease-in-out;
+	}
+	.caption-style .blur{
+		background-color: rgba(0,0,0,0.65);
+		height: 300px;
+		width: 400px;
+		z-index: 5;
+		position: absolute;
+	}
+
+	.caption-style .caption-text h1{
+		text-transform: uppercase;
+		font-size: 24px;
+	}
+	.caption-style .caption-text{
+		z-index: 10;
+		color: #fff;
+		position: absolute;
+		width: 400px;
+		height: 300px;
+		text-align: center;
+		top:100px;
+	}
+
+	p {
+		text-align: center;
 	}
 
 }
